translation-tool/inputs/source_meta/objects/HnsCompLocBcAttachVws__x.object
<CustomObject>
    <description>HnsCompLocBcAttachVws</description>
    <externalDataSource>PSView</externalDataSource>
    <externalName>HnsCompLocBcAttachVws</externalName>
    <fields>
        <fullName>ACCOUNT_ID__c</fullName>
        <description>ACCOUNT_ID</description>
        <externalDeveloperName>ACCOUNT_ID</externalDeveloperName>
        <label>ACCOUNT_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATTACHSYSFILENAME__c</fullName>
        <description>ATTACHSYSFILENAME</description>
        <externalDeveloperName>ATTACHSYSFILENAME</externalDeveloperName>
        <label>ATTACHSYSFILENAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATTACHUSERFILE__c</fullName>
        <description>ATTACHUSERFILE</description>
        <externalDeveloperName>ATTACHUSERFILE</externalDeveloperName>
        <label>ATTACHUSERFILE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATTACH_SEQ_NBR__c</fullName>
        <description>ATTACH_SEQ_NBR</description>
        <externalDeveloperName>ATTACH_SEQ_NBR</externalDeveloperName>
        <label>ATTACH_SEQ_NBR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BO_ID__c</fullName>
        <description>BO_ID</description>
        <externalDeveloperName>BO_ID</externalDeveloperName>
        <label>BO_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DESCRIPTION__c</fullName>
        <description>DESCRIPTION</description>
        <externalDeveloperName>DESCRIPTION</externalDeveloperName>
        <label>DESCRIPTION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOTE_SEQ_NBR__c</fullName>
        <description>NOTE_SEQ_NBR</description>
        <externalDeveloperName>NOTE_SEQ_NBR</externalDeveloperName>
        <label>NOTE_SEQ_NBR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROW_ADDED_DTTM__c</fullName>
        <description>ROW_ADDED_DTTM</description>
        <externalDeveloperName>ROW_ADDED_DTTM</externalDeveloperName>
        <label>ROW_ADDED_DTTM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROW_ADDED_OPRID__c</fullName>
        <description>ROW_ADDED_OPRID</description>
        <externalDeveloperName>ROW_ADDED_OPRID</externalDeveloperName>
        <label>ROW_ADDED_OPRID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROW_LASTMANT_DTTM__c</fullName>
        <description>ROW_LASTMANT_DTTM</description>
        <externalDeveloperName>ROW_LASTMANT_DTTM</externalDeveloperName>
        <label>ROW_LASTMANT_DTTM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROW_LASTMANT_OPRID__c</fullName>
        <description>ROW_LASTMANT_OPRID</description>
        <externalDeveloperName>ROW_LASTMANT_OPRID</externalDeveloperName>
        <label>ROW_LASTMANT_OPRID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SYNCDTTM__c</fullName>
        <description>SYNCDTTM</description>
        <externalDeveloperName>SYNCDTTM</externalDeveloperName>
        <label>SYNCDTTM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SYNCID__c</fullName>
        <description>SYNCID</description>
        <externalDeveloperName>SYNCID</externalDeveloperName>
        <label>SYNCID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>URL</description>
        <externalDeveloperName>URL</externalDeveloperName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HnsCompLocBcAttachVws</label>
    <pluralLabel>HnsCompLocBcAttachVws</pluralLabel>
</CustomObject>